fix(coachmark): update solution for action menu spacing

--- a/components/coachmark/index.css
+++ b/components/coachmark/index.css
@@ -105,12 +105,6 @@
 	margin-block-end: var(--mod-coachmark-header-to-body, var(--spectrum-coachmark-header-to-body));
 }
 
-/* Enforces consistent spacing from image to header and header to text with action menu present */
-.spectrum-CoachMark-header:has(.spectrum-CoachMark-action-menu) {
-	--mod-coachmark-image-to-heading: calc(var(--spectrum-spacing-200) * 1.55);
-	--mod-coachmark-header-to-body: calc(var(--spectrum-spacing-75) * 1.6);
-}
-
 /* Text wrapper for the title content; sides besdie action menu if present */
 .spectrum-CoachMark-title {
 	color: var(--mod-coachmark-title-color, var(--spectrum-coachmark-title-color));
@@ -128,7 +122,7 @@
 
 	white-space: nowrap;
 	z-index: 1;
-	margin-inline-start: var(--mod-coachmark-heading-to-action-button, var(--spectrum-coachmark-heading-to-action-button));
+	margin-block: var(--mod-coachmark-action-menu-vertical-offset, var(--spectrum-coachmark-action-menu-vertical-offset));
 }
 
 /* @deprecated not used currently in demos or by SWC */
